--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/vb.net.png)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Sistema de Control en VB.Net</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Explicabo iure sint, perspiciatis distinctio molestias nihil
@@ -136,9 +136,9 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/web.png)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Pagina Web Procesadora</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
@@ -153,9 +153,9 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/mobile.jpeg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Aplicacion Mobile para el Control de Roedores</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Obcaecati facere quibusdam sint id laborum magni velit ducimus
